# CGRC

./: .gitignore  CMakeLists.txt
Assets/: commads.txt
Commands/: Command.h  Cube.cpp  Cube.h  Sphere.cpp  Sphere.h  Split.cpp  Split.h
GLRenderSystem/: CMakeLists.txt
GLRenderSystem/src/: Exports.cpp  Exports.h  GLRenderSystem.cpp  GLRenderSystem.h  GLWindow.cpp  GLWindow.h  glad.h
Interfaces/: IRenderSystem.h  IWindow.h
MeshEditor/: CMakeLists.txt
MeshEditor/src/: Camera.cpp  Camera.h  DynamicLibrary.cpp  DynamicLibrary.h  GLRenderSystem.cpp  GLRenderSystem.h  GLWindow.cpp  GLWindow.h  HalfEdge.cpp  HalfEdge.h  Mesh.cpp  Mesh.h  Viewport.cpp  Viewport.h  main.cpp
Parser/: Application.cpp  Application.h  STLParser.cpp  STLParser.h  main.cpp
